tests/fail/08_recursive_struct.lang
// ОЖИДАЕТСЯ ОШИБКА: рекурсивное объявление структуры
структура А {
    А поле;
}

функция Начало() : целое {
    вернуть 0;
}
